--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -1,13 +1,18 @@
 .title {
   text-align: center;
+  padding: 5rem;
+  margin-bottom: 4rem;
+  color: red;
 }
 
 .button {
   text-decoration: none;
   display: block;
-  background-color: #dddddd;
-  color: #555555;
+  background-color: black;
+  color: white;
   text-align: center;
-  padding: 1rem;
-  margin-bottom: 1rem;
+  padding: 5rem;
+  margin-bottom: 4rem;
+  border-style: inset;
+  border-radius: 105px;
 }
