--- a/src/pages/Homepage.css
+++ b/src/pages/Homepage.css
@@ -2,7 +2,10 @@
   text-align: center;
   padding: 5rem;
   margin-bottom: 4rem;
+  margin-right: 4rem;
+  margin-left: 4rem;
   color: red;
+  background-color: orange;
 }
 
 .button {
@@ -11,7 +14,7 @@
   background-color: black;
   color: white;
   text-align: center;
-  padding: 5rem;
+  padding: 2rem;
   margin-bottom: 4rem;
   border-style: inset;
   border-radius: 105px;
